--- a/backend/test_send_message.html
+++ b/backend/test_send_message.html
@@ -12,6 +12,16 @@
 <body>
     <div class="container" role="main">
         <h1>AI Chat Assistant</h1>
+        <!-- Add history section -->
+        <div class="history-section" id="historySection">
+            <h2>Chat History</h2>
+            <div class="history-container" id="historyContainer"></div>
+            <div class="pagination">
+                <button id="prevPage" aria-label="Previous page">&lt;</button>
+                <span id="pageInfo">Page 1</span>
+                <button id="nextPage" aria-label="Next page">&gt;</button>
+            </div>
+        </div>
         <div class="test-area">
             <div class="input-group" role="group" aria-label="Chat input group">
                 <input type="text" id="testMessage" 
@@ -119,6 +129,41 @@
             }
         }
 
+        // Add history management
+        let chatHistory = [];
+        let currentPage = 1;
+        const itemsPerPage = 5;
+
+        function renderHistory() {
+            const startIndex = (currentPage - 1) * itemsPerPage;
+            const endIndex = startIndex + itemsPerPage;
+            const pageItems = chatHistory.slice(startIndex, endIndex);
+            
+            const historyHtml = pageItems.map(entry => `
+                <div class="history-item">
+                    <div class="timestamp">${new Date(entry.timestamp).toLocaleString()}</div>
+                    <div class="message-box user-message" lang="th">
+                        <strong>Your message:</strong>
+                        <div class="content">${entry.user}</div>
+                    </div>
+                    <div class="message-box bot-message" lang="th">
+                        <strong>Response:</strong>
+                        ${formatResponse(entry.bot)}
+                    </div>
+                </div>
+            `).join('');
+
+            document.getElementById('historyContainer').innerHTML = historyHtml;
+            updatePagination();
+        }
+
+        function updatePagination() {
+            const totalPages = Math.ceil(chatHistory.length / itemsPerPage);
+            document.getElementById('pageInfo').textContent = `Page ${currentPage} of ${totalPages}`;
+            document.getElementById('prevPage').disabled = currentPage === 1;
+            document.getElementById('nextPage').disabled = currentPage >= totalPages;
+        }
+
         async function testGeminiAPI() {
             const messageInput = document.getElementById('testMessage');
             const sendButton = document.getElementById('sendButton');
@@ -143,6 +188,18 @@
                 if (result.error) {
                     responseArea.innerHTML = `<span class="error" role="alert">Error: ${result.error}</span>`;
                 } else {
+                    // Add to history
+                    chatHistory.unshift({
+                        user: message,
+                        bot: result.response,
+                        timestamp: new Date().toISOString()
+                    });
+
+                    // Update display
+                    currentPage = 1;
+                    renderHistory();
+                    
+                    // Show current response
                     responseArea.innerHTML = `
                         <div class="message-box user-message" lang="th">
                             <strong>Your message:</strong>
@@ -164,6 +221,22 @@
                 messageInput.value = '';
             }
         }
+
+        // Add pagination event listeners
+        document.getElementById('prevPage').addEventListener('click', () => {
+            if (currentPage > 1) {
+                currentPage--;
+                renderHistory();
+            }
+        });
+
+        document.getElementById('nextPage').addEventListener('click', () => {
+            const totalPages = Math.ceil(chatHistory.length / itemsPerPage);
+            if (currentPage < totalPages) {
+                currentPage++;
+                renderHistory();
+            }
+        });
 
         // Add Enter key support
         document.getElementById('testMessage').addEventListener('keypress', function(e) {
