Fix HTML structure in test_send_message.html by closing nav tag and improving pagination layout

--- a/backend/test_send_message.html
+++ b/backend/test_send_message.html
@@ -17,9 +17,11 @@
             <h2>Chat History</h2>
             <div class="history-container" id="historyContainer"></div>
             <div class="pagination">
-                <button id="prevPage" aria-label="Previous page">&lt;</button>
+ 
+                </nav><button id="prevPage" aria-label="Previous page">&lt;</button>
                 <span id="pageInfo">Page 1</span>
                 <button id="nextPage" aria-label="Next page">&gt;</button>
+            
             </div>
         </div>
         <div class="test-area">
