Enhance response area accessibility in test_send_message.html by adding style attributes for better visibility and overflow management

--- a/backend/test_send_message.html
+++ b/backend/test_send_message.html
@@ -40,8 +40,9 @@
             <div id="responseArea" 
                  class="response-area" 
                  role="log" 
-                 aria-live="polite" 
-                 aria-atomic="true">
+                 aria-live="polite"
+                 aria-atomic="true"
+                 style="opacity: 1; max-height: 20px; overflow-y: auto;">
                 Response will appear here...
             </div>
         </div>
