Enhance loading status display with animated dots in main.css; update processing message in test_send_message.html

--- a/backend/test_send_message.html
+++ b/backend/test_send_message.html
@@ -112,7 +112,7 @@
             sendButton.disabled = true;
             sendButton.classList.add('loading');
             sendButton.textContent = 'Sending...';
-            currentResponse.innerHTML = '<span class="status" role="status">Processing...</span>';
+            currentResponse.innerHTML = '<span class="status" role="status">Processing</span>';
 
             try {
                 const result = await sendMessageToGemini(message);
